--- a/late-releasing-block.Rmd
+++ b/late-releasing-block.Rmd
@@ -323,21 +323,7 @@ report_run_date <- Sys.Date()
 
 ```
 
-
-```{r Late Releasing Slots, echo = FALSE, warning = FALSE, message = FALSE}
-
-# Slot Block Data --------------------------------------------------------------
-late_block_raw <- block_raw_tbl %>%
-  mutate(Slot.DateYear = TO_DATE(SLOT_BEGIN_TIME),
-         Slot.Year = year(SLOT_BEGIN_TIME),
-         Slot.Month = month(SLOT_BEGIN_TIME)) %>%
-  filter(Slot.Year == 2023) %>%
-  filter(Slot.Month >= 04) %>%
-  collect() %>%
-  mutate(Slot.YearMonth = format(as.Date(Slot.DateYear), "%Y-%m"))
-
-late_block_raw$block_name <- block_name_raw$NAME[match(late_block_raw$BLOCK_C, block_name_raw$APPT_BLOCK_C)]
-
+```{r Department and Provider Mapping, echo = FALSE, warning = FALSE, message = FALSE}
 
 # Department and Provider Mapping ----------------------------------------------
 dept_mapping <- access_raw_tbl %>%
@@ -354,53 +340,137 @@ prov_mapping <- access_raw_tbl %>%
 
 prov_mapping$PROV_NAME <- trimws(gsub("\\[.*?\\]", "", prov_mapping$PROV_NAME_WID))
 
+block_name_raw <- block_name_tbl %>%
+  collect()
+
+```
+
+
+```{r Late Releasing Slots, echo = FALSE, warning = FALSE, message = FALSE}
+
+# Slot Block Data --------------------------------------------------------------
+late_block_raw <- block_raw_tbl %>%
+  mutate(Slot.DateYear = TO_DATE(SLOT_BEGIN_TIME),
+         Slot.Year = year(SLOT_BEGIN_TIME),
+         Slot.Month = month(SLOT_BEGIN_TIME)) %>%
+  filter(Slot.Year == 2023) %>%
+  filter(Slot.Month >= 04) %>%
+  collect() %>%
+  mutate(Slot.YearMonth = format(as.Date(Slot.DateYear), "%Y-%m"))
+
+late_block_raw$block_name <- block_name_raw$NAME[match(late_block_raw$BLOCK_C, block_name_raw$APPT_BLOCK_C)]
+
 
 # Map Department and Provider Name ---------------------------------------------
 late_block_raw$Campus <- dept_mapping$SITE[match(late_block_raw$DEPARTMENT_ID, dept_mapping$DEPARTMENT_ID)]
 late_block_raw$Department <- dept_mapping$DEPARTMENT_NAME[match(late_block_raw$DEPARTMENT_ID, dept_mapping$DEPARTMENT_ID)]
 late_block_raw$Provider <- prov_mapping$PROV_NAME[match(late_block_raw$PROV_ID, prov_mapping$PROV_ID)]
 
-
-# Cateogrize Block Type: Late Reasing vs. Other 
-late_block_raw <- late_block_raw %>%
-  group_by(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME) %>%
-  mutate(late_release_allowed = ifelse(any(BLOCK_C %in% c("578","579","580","581")) == FALSE, "Other", ""),
-         late_release_allowed_7 = ifelse(any(BLOCK_C == "578") == TRUE, "NEW PATIENT 7-DAY", ""),
-         late_release_allowed_14 = ifelse(any(BLOCK_C == "579") == TRUE, "NEW PATIENT 14-DAY", ""),
-         late_release_allowed_21 = ifelse(any(BLOCK_C == "580") == TRUE, "NEW PATIENT 21-DAY", ""),
-         late_release_allowed_28 = ifelse(any(BLOCK_C == "581") == TRUE, "NEW PATIENT 28-DAY", ""))
-
-late_block_summary <- late_block_raw %>%
-  group_by(Campus, Department, Provider, SLOT_BEGIN_TIME, Slot.DateYear, Slot.YearMonth,
-           late_release_allowed, late_release_allowed_7, late_release_allowed_14, late_release_allowed_21, late_release_allowed_28) %>%
-  summarise(total = n())
-  
-late_block_summary[is.na(late_block_summary)] <- ""
-
-late_block_summary <- late_block_summary %>%
-    mutate(slot_category = trim(paste(late_release_allowed, late_release_allowed_7, late_release_allowed_14, late_release_allowed_21, late_release_allowed_28)))
-  
-
-late_block_usage <- late_block_summary %>%
-  group_by(Campus, Department, Provider, Slot.YearMonth, Slot.DateYear, slot_category) %>%
-  summarise(category_slots = n()) %>%
-  pivot_wider(names_from = slot_category,
-              values_from = category_slots,
-              values_fill = 0) %>%
-  ungroup() %>%
-  add_column(total_slots= "", .before = "Other") %>%
-  add_column(perc_late = "", .after = "total_slots")
-
-late_block_usage <- late_block_usage %>%
-  mutate(total_slots = rowSums(across(8:length(late_block_usage)), na.rm = T)) %>%
-  mutate(perc_late = round((total_slots - Other)/total_slots,2)) %>%
-  dplyr::select(1:8, 'NEW PATIENT 7-DAY', 'NEW PATIENT 14-DAY', 'NEW PATIENT 21-DAY', 'NEW PATIENT 28-DAY', 'NEW PATIENT 7-DAY NEW PATIENT 14-DAY')
-
-late_block_usage <- late_block_usage %>%
-  mutate(Slot.DateYear = as.character(Slot.DateYear))
-  
 ```
 
+
+```{r Block Usage Audit, echo = FALSE, warning = FALSE, message = FALSE}
+
+# Block Type Usage Audit Data =================================================
+## Count of Block Type Usage --------------------------------------------------
+block_usage <- late_block_raw %>%
+  group_by(Campus, DEPARTMENT_ID, Department, PROV_ID, Provider, BLOCK_C, block_name) %>%
+  summarise(total = n())
+
+## Count of Block Combination Usage --------------------------------------------
+block_combination_usage <- late_block_raw %>%
+  arrange(Campus, DEPARTMENT_ID, Department, SLOT_BEGIN_TIME, block_name) %>%
+  group_by(Campus, DEPARTMENT_ID, Department, SLOT_BEGIN_TIME) %>%
+  summarise(block_combination = paste0(unique(block_name[block_name!='']), collapse = ', ')) %>%
+  group_by(Campus, DEPARTMENT_ID, Department, block_combination) %>%
+  summarise(total = n())
+
+## Unique Block Types ----------------------------------------------------------
+block_type <- late_block_raw %>%
+  group_by(BLOCK_C, block_name) %>%
+  summarise(total = n())
+
+
+require(openxlsx)
+data_list <- list("Unique Blocks" = block_type,
+                  "Block Usage" = block_usage,
+                  "Block Combination Usage" = block_combination_usage)
+write.xlsx(data_list, "Block Types and Usage_5.5.2023.xlsx")
+
+```
+
+
+```{r Report Processing, echo = FALSE, warning = FALSE, message = FALSE}
+
+late_block_summary <- late_block_raw %>%
+  arrange(Campus, DEPARTMENT_ID, Department, PROV_ID, Provider, SLOT_BEGIN_TIME, block_name) %>%
+  group_by(Campus, DEPARTMENT_ID, Department, PROV_ID, Provider, SLOT_BEGIN_TIME, Slot.YearMonth) %>%
+  summarise(block_combination = paste0(unique(block_name[block_name!='']), collapse = ', ')) %>%
+  group_by(Campus, DEPARTMENT_ID, Department, PROV_ID, Provider, Slot.YearMonth, block_combination) %>%
+  summarise(total = n())
+
+late_block_summary <- late_block_summary %>%
+  mutate(block_category = case_when(str_detect(block_combination, "New Patient 7-Day|New Patient 14-Day|New Patient 21-Day|New Patient 28-Day") ~ "Late-Releasing",
+                                    TRUE ~ "Non-Late-Releasing"))
+
+late_block_summary <- late_block_summary %>%
+  pivot_wider(names_from = "block_category",
+              values_from = "total",
+              values_fill = 0)
+
+late_block_summary <- late_block_summary %>%
+  mutate(total_slots = sum(`Non-Late-Releasing`,`Late-Releasing`),
+         perc_late = round(`Late-Releasing`/total_slots,2)) %>%
+  rename(late_slots = `Late-Releasing`,
+         other_slots = `Non-Late-Releasing`)
+
+late_block_summary <- late_block_summary %>%
+  arrange(Campus, Department, Provider)
+  # mutate(Slot.DateYear = as.character(Slot.DateYear))
+
+```
+
+
+<!-- ```{r Report Processing, echo = FALSE, warning = FALSE, message = FALSE} -->
+<!-- # Categorize Block Type: Late Releasing vs. Other  -->
+<!-- late_block_raw <- late_block_raw %>% -->
+<!--   group_by(DEPARTMENT_ID, PROV_ID, SLOT_BEGIN_TIME) %>% -->
+<!--   mutate(late_release_allowed = ifelse(any(BLOCK_C %in% c("578","579","580","581")) == FALSE, "Other", ""), -->
+<!--          late_release_allowed_7 = ifelse(any(BLOCK_C == "578") == TRUE, "NEW PATIENT 7-DAY", ""), -->
+<!--          late_release_allowed_14 = ifelse(any(BLOCK_C == "579") == TRUE, "NEW PATIENT 14-DAY", ""), -->
+<!--          late_release_allowed_21 = ifelse(any(BLOCK_C == "580") == TRUE, "NEW PATIENT 21-DAY", ""), -->
+<!--          late_release_allowed_28 = ifelse(any(BLOCK_C == "581") == TRUE, "NEW PATIENT 28-DAY", "")) -->
+
+<!-- late_block_summary <- late_block_raw %>% -->
+<!--   group_by(Campus, Department, Provider, SLOT_BEGIN_TIME, Slot.DateYear, Slot.YearMonth, -->
+<!--            late_release_allowed, late_release_allowed_7, late_release_allowed_14, late_release_allowed_21, late_release_allowed_28) %>% -->
+<!--   summarise(total = n()) -->
+
+<!-- late_block_summary[is.na(late_block_summary)] <- "" -->
+
+<!-- late_block_summary <- late_block_summary %>% -->
+<!--     mutate(slot_category = trim(paste(late_release_allowed, late_release_allowed_7, late_release_allowed_14, late_release_allowed_21, late_release_allowed_28))) -->
+
+
+<!-- late_block_usage <- late_block_summary %>% -->
+<!--   group_by(Campus, Department, Provider, Slot.YearMonth, Slot.DateYear, slot_category) %>% -->
+<!--   summarise(category_slots = n()) %>% -->
+<!--   pivot_wider(names_from = slot_category, -->
+<!--               values_from = category_slots, -->
+<!--               values_fill = 0) %>% -->
+<!--   ungroup() %>% -->
+<!--   add_column(total_slots= "", .before = "Other") %>% -->
+<!--   add_column(perc_late = "", .after = "total_slots") -->
+
+<!-- late_block_usage <- late_block_usage %>% -->
+<!--   mutate(total_slots = rowSums(across(8:length(late_block_usage)), na.rm = T)) %>% -->
+<!--   mutate(perc_late = round((total_slots - Other)/total_slots,2)) %>% -->
+<!--   dplyr::select(1:8, 'NEW PATIENT 7-DAY', 'NEW PATIENT 14-DAY', 'NEW PATIENT 21-DAY', 'NEW PATIENT 28-DAY', 'NEW PATIENT 7-DAY NEW PATIENT 14-DAY') -->
+
+<!-- late_block_usage <- late_block_usage %>% -->
+<!--   mutate(Slot.DateYear = as.character(Slot.DateYear)) -->
+
+<!-- ``` -->
 
 
 ```{r Sinai Logo, echo=FALSE, out.width = '15%'}
@@ -440,7 +510,7 @@ htmltools::browsable(
 #     tags$hr("aria-hidden" = "true"),
 
 reactable(
-  late_block_usage,
+  late_block_summary,
   elementId = "late-releasing-count",
   # elementId = "cars-grouping-table",
   style = list(fontFamily = 'Calibri',
@@ -504,90 +574,130 @@ reactable(
       minWidth = 200),
     
     Provider = colDef(
-      minWidth = 150),
+      minWidth = 130),
     
     Slot.YearMonth = colDef(
       name = "Year-Month",
       minWidth = 100),
     
-    Slot.DateYear = colDef(
-      name = "Date",
-      minWidth = 100),
+    # Slot.DateYear = colDef(
+    #   name = "Date",
+    #   minWidth = 100),
+    
+    block_combination = colDef(
+      name = "Block Combination",
+      minWidth = 200),
     
     total_slots = colDef(
       name = "Total Time Slots",
-      maxWidth = 120,
+      maxWidth = 100,
       headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
       aggregate = 'sum',
       format = colFormat(separators = TRUE, digits = 0),
       style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
     ),
-
+    
     perc_late = colDef(
       name = "% Late-Releasing Blocks",
-      maxWidth = 120,
+      maxWidth = 100,
      headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
       aggregate = JS("function(values, rows) {
         let totaltotal_slots = 0
-        let totalOther = 0
+        let totallate_slots = 0
         rows.forEach(function(row) {
           totaltotal_slots += row['total_slots']
-          totalOther += row['Other']
+          totallate_slots += row['late_slots']
         })
-        return (totaltotal_slots - totalOther) / totaltotal_slots
+        return (totallate_slots) / totaltotal_slots
       }"),
       format = colFormat(percent = TRUE, digits = 0),
       style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
     ),
-
-    Other = colDef(
-      name = "Non-Late-Reasing",
-      maxWidth = 120,
-      headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
-      aggregate = 'sum',
-      format = colFormat(separators = TRUE, digits = 0),
-      style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    ),
     
-    `NEW PATIENT 7-DAY` = colDef(
-      maxWidth = 120,
-      headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
-      aggregate = 'sum',
-      format = colFormat(separators = TRUE, digits = 0),
-      style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    ),
+    DEPARTMENT_ID = colDef(show =F),
+    PROV_ID = colDef(show =F),
+    other_slots = colDef(show =F),
+    late_slots = colDef(show =F)
     
-    `NEW PATIENT 14-DAY` = colDef(
-      maxWidth = 120,
-      headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
-      aggregate = 'sum',
-      format = colFormat(separators = TRUE, digits = 0),
-      style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    ),
     
-    `NEW PATIENT 21-DAY` = colDef(
-      maxWidth = 120,
-      headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
-      aggregate = 'sum',
-      format = colFormat(separators = TRUE, digits = 0),
-      style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    ),
     
-    `NEW PATIENT 28-DAY` = colDef(
-      maxWidth = 120,
-      headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
-      aggregate = 'sum',
-      format = colFormat(separators = TRUE, digits = 0),
-      style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    ),
-   
-    `NEW PATIENT 7-DAY NEW PATIENT 14-DAY` = colDef(
-      maxWidth = 120,
-      headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
-      aggregate = 'sum',
-      format = colFormat(separators = TRUE, digits = 0),
-      style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    )
+    
+    
+    
+    # total_slots = colDef(
+    #   name = "Total Time Slots",
+    #   maxWidth = 120,
+    #   headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
+    #   aggregate = 'sum',
+    #   format = colFormat(separators = TRUE, digits = 0),
+    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+    # ),
+    # 
+    # perc_late = colDef(
+    #   name = "% Late-Releasing Blocks",
+    #   maxWidth = 120,
+    #  headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
+    #   aggregate = JS("function(values, rows) {
+    #     let totaltotal_slots = 0
+    #     let totalOther = 0
+    #     rows.forEach(function(row) {
+    #       totaltotal_slots += row['total_slots']
+    #       totalOther += row['Other']
+    #     })
+    #     return (totaltotal_slots - totalOther) / totaltotal_slots
+    #   }"),
+    #   format = colFormat(percent = TRUE, digits = 0),
+    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+    # ),
+    # 
+    # Other = colDef(
+    #   name = "Non-Late-Reasing",
+    #   maxWidth = 120,
+    #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
+    #   aggregate = 'sum',
+    #   format = colFormat(separators = TRUE, digits = 0),
+    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+    # ),
+    # 
+    # `NEW PATIENT 7-DAY` = colDef(
+    #   maxWidth = 120,
+    #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
+    #   aggregate = 'sum',
+    #   format = colFormat(separators = TRUE, digits = 0),
+    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+    # ),
+    # 
+    # `NEW PATIENT 14-DAY` = colDef(
+    #   maxWidth = 120,
+    #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
+    #   aggregate = 'sum',
+    #   format = colFormat(separators = TRUE, digits = 0),
+    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+    # ),
+    # 
+    # `NEW PATIENT 21-DAY` = colDef(
+    #   maxWidth = 120,
+    #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
+    #   aggregate = 'sum',
+    #   format = colFormat(separators = TRUE, digits = 0),
+    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+    # ),
+    # 
+    # `NEW PATIENT 28-DAY` = colDef(
+    #   maxWidth = 120,
+    #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
+    #   aggregate = 'sum',
+    #   format = colFormat(separators = TRUE, digits = 0),
+    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+    # ),
+    # 
+    # `NEW PATIENT 7-DAY NEW PATIENT 14-DAY` = colDef(
+    #   maxWidth = 120,
+    #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
+    #   aggregate = 'sum',
+    #   format = colFormat(separators = TRUE, digits = 0),
+    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+    # )
     
   ) # Close Columns
 
