--- a/late-releasing-block.Rmd
+++ b/late-releasing-block.Rmd
@@ -371,31 +371,35 @@ late_block_raw$Provider <- prov_mapping$PROV_NAME[match(late_block_raw$PROV_ID, 
 
 ```{r Block Usage Audit, echo = FALSE, warning = FALSE, message = FALSE}
 
-# # Block Type Usage Audit Data =================================================
-# ## Count of Block Type Usage --------------------------------------------------
-# block_usage <- late_block_raw %>%
-#   group_by(Campus, DEPARTMENT_ID, Department, PROV_ID, Provider, BLOCK_C, block_name) %>%
-#   summarise(total = n())
-# 
-# ## Count of Block Combination Usage --------------------------------------------
-# block_combination_usage <- late_block_raw %>%
-#   arrange(Campus, DEPARTMENT_ID, Department, SLOT_BEGIN_TIME, block_name) %>%
-#   group_by(Campus, DEPARTMENT_ID, Department, SLOT_BEGIN_TIME) %>%
-#   summarise(block_combination = paste0(unique(block_name[block_name!='']), collapse = ', ')) %>%
-#   group_by(Campus, DEPARTMENT_ID, Department, block_combination) %>%
-#   summarise(total = n())
-# 
-# ## Unique Block Types ----------------------------------------------------------
-# block_type <- late_block_raw %>%
-#   group_by(BLOCK_C, block_name) %>%
-#   summarise(total = n())
-# 
-# 
+# Block Type Usage Audit Data =================================================
+## Count of Block Type Usage --------------------------------------------------
+block_usage <- late_block_raw %>%
+  group_by(Campus, DEPARTMENT_ID, Department, PROV_ID, Provider, BLOCK_C, block_name) %>%
+  summarise(total = n())
+
+## Count of Block Combination Usage --------------------------------------------
+block_combination_usage <- late_block_raw %>%
+  arrange(Campus, DEPARTMENT_ID, Department, SLOT_BEGIN_TIME, block_name) %>%
+  group_by(Campus, DEPARTMENT_ID, Department, Provider, SLOT_BEGIN_TIME) %>%
+  summarise(block_combination = paste0(unique(block_name[block_name!='']), collapse = ', ')) %>%
+  mutate(Slot.Year = year(SLOT_BEGIN_TIME),
+         Slot.Month = month(SLOT_BEGIN_TIME)) %>%
+  group_by(Campus, DEPARTMENT_ID, Department, Provider, Slot.Year, Slot.Month, block_combination) %>%
+  summarise(total = n()) %>%
+  rename(Site = Campus,
+         total_slots = total)
+
+## Unique Block Types ----------------------------------------------------------
+block_type <- late_block_raw %>%
+  group_by(BLOCK_C, block_name) %>%
+  summarise(total = n())
+
+
 # require(openxlsx)
 # data_list <- list("Unique Blocks" = block_type,
 #                   "Block Usage" = block_usage,
 #                   "Block Combination Usage" = block_combination_usage)
-# write.xlsx(data_list, "Block Types and Usage_5.5.2023.xlsx")
+# write.xlsx(data_list, "Block Types and Usage_5.17.2023.xlsx")
 
 ```
 
@@ -487,12 +491,236 @@ ________________________________________________________________________________
 
 ```{r Late Releasing Block Output (Slot Count), echo = FALSE, warning = FALSE, message = FALSE}
 
+# # Table Output -----------------------------------------------------------------
+# htmltools::browsable(
+#   tagList(
+#     tags$button(
+#       tagList(fontawesome::fa("download"), "Download Table"),
+#       onclick = "Reactable.downloadDataCSV('late-releasing-count', 'Late-Releasing Blocks')"
+#     ),
+# 
+# # htmltools::browsable(
+# #   tagList(
+# #     div(tags$label("Group by", `for` = "cars-grouping-select")),
+# #     tags$select(
+# #       id = "cars-grouping-select",
+# #       onchange = "Reactable.setGroupBy('cars-grouping-table', this.value ? [this.value] : [])",
+# #       tags$option("None", value = c("Campus","Campus.Specialty.Group")),
+# #       # tags$option("Test", value = c("Appt.Source.New","Campus.Specialty.Group")),
+# #       # lapply(c("Campus", "Campus.Specialty.Group", "Appt.Source.New"), tags$option)
+# #       lapply(c("Campus", "Campus.Specialty.Group", "Appt.Source.New"), tags$option)
+# #     ),
+# # 
+# #     tags$hr("aria-hidden" = "true"),
+# 
+# reactable(
+#   late_block_summary,
+#   elementId = "late-releasing-count",
+#   # elementId = "cars-grouping-table",
+#   style = list(fontFamily = 'Calibri',
+#                  fontSize = '14px'),
+#     defaultColDef = colDef(align = "left",
+#                            headerStyle = list(fontWeight = "Bold", fontSize = "14px"),
+#                            headerClass = "bar-sort-header"),
+#   # RowStyle = function(index) {
+#   #           if (index %in% c(nrow(referral_vol_site_data_mshs))) {
+#   #             list(`border-top` = "2px solid rgb(184,184,184)",
+#   #                  fontWeight = "Bold")
+#   #           }
+#   #         },
+#     highlight = TRUE,
+#     # filterable = TRUE,
+#     pagination = FALSE,
+#     # height = 800,
+#     wrap = TRUE,
+#   searchable = TRUE,
+#   
+#   rowStyle = function(index) {
+#             if (index %in% c(10)) {
+#               list(`border-top` = "2px solid rgb(184,184,184)",
+#                    fontWeight = "Bold")
+#             }
+#           },
+# 
+#   groupBy = c("Campus", "Department", "Provider", "Slot.YearMonth"),
+# 
+#   # columnGroups = list(
+#   #   # colGroup(name = paste0(format(as.Date(start_date), "%b"),"-",format(as.Date(end_date), "%b %Y"), " Visit Volume"), 
+#   #   #          columns = c("Total", "new_perc"),
+#   #   #          headerStyle = list(color = "#212070", fontSize = "16px")),
+#   #   # colGroup(name = paste0(format(as.Date(start_date), "%b"),"-",format(as.Date(end_date), "%b %Y"), " No Show Rate"), 
+#   #   #          columns = c("noShow_rate", "noShow_rate_Established", "noShow_rate_New"),
+#   #   #          headerStyle = list(color = "#d80b8c", fontSize = "16px"))
+#   #   colGroup(name = "", 
+#   #            columns = c("Campus","Campus.Specialty.Group"), sticky = "left", 
+#   #            headerStyle = list(fontSize = "16px")),
+#   #   colGroup(name = paste0(current_year, " YTD Visit Volume"), 
+#   #            columns = c("Arrived","arrived_perc","new_perc"),
+#   #            headerStyle = list(color = "#212070", fontSize = "16px")),
+#   #   colGroup(name = "No Show Plus Rate - All", 
+#   #            columns = c("noShow_rate", "noShow_rate_sameDay", "noShow_rate_belowFourteen", "noShow_rate_belowThirty", "noShow_rate_overThirty"),
+#   #            headerStyle = list(color = "#7f7f7f", fontSize = "16px")),
+#   #   colGroup(name = "No Show Plus Rate - Established", 
+#   #            columns = c("noShow_rate_Established", "noShow_rate_sameDay_Established", "noShow_rate_belowFourteen_Established", "noShow_rate_belowThirty_Established", "noShow_rate_overThirty_Established"),
+#   #            headerStyle = list(color = "#d80b8c", fontSize = "16px")),
+#   #   colGroup(name = "No Show Plus Rate - New", 
+#   #            columns = c("noShow_rate_New","noShow_rate_sameDay_New", "noShow_rate_belowFourteen_New","noShow_rate_belowThirty_New", "noShow_rate_overThirty_New"),
+#   #            headerStyle = list(color = "#00aeef", fontSize = "16px"))
+#   #   ),
+# 
+#   columns = list(
+# 
+#     Campus = colDef(
+#       name = "Site",
+#       minWidth = 180),
+# 
+#     Department = colDef(
+#       minWidth = 200),
+#     
+#     Provider = colDef(
+#       minWidth = 130),
+#     
+#     Slot.YearMonth = colDef(
+#       name = "Year-Month",
+#       minWidth = 100),
+#     
+#     # Slot.DateYear = colDef(
+#     #   name = "Date",
+#     #   minWidth = 100),
+#     
+#     block_combination = colDef(
+#       name = "Block Combination",
+#       minWidth = 200),
+#     
+#     total_slots = colDef(
+#       name = "Total Time Slots",
+#       maxWidth = 100,
+#       headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
+#       aggregate = 'sum',
+#       format = colFormat(separators = TRUE, digits = 0),
+#       style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+#     ),
+#     
+#     perc_late = colDef(
+#       name = "% Late-Releasing Blocks",
+#       maxWidth = 100,
+#      headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
+#       aggregate = JS("function(values, rows) {
+#         let totaltotal_slots = 0
+#         let totallate_slots = 0
+#         rows.forEach(function(row) {
+#           totaltotal_slots += row['total_slots']
+#           totallate_slots += row['late_slots']
+#         })
+#         return (totallate_slots) / totaltotal_slots
+#       }"),
+#       format = colFormat(percent = TRUE, digits = 0),
+#       style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+#     ),
+#     
+#     DEPARTMENT_ID = colDef(show =F),
+#     PROV_ID = colDef(show =F),
+#     other_slots = colDef(show =F),
+#     late_slots = colDef(show =F)
+#     
+#     
+#     
+#     
+#     
+#     
+#     # total_slots = colDef(
+#     #   name = "Total Time Slots",
+#     #   maxWidth = 120,
+#     #   headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
+#     #   aggregate = 'sum',
+#     #   format = colFormat(separators = TRUE, digits = 0),
+#     #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+#     # ),
+#     # 
+#     # perc_late = colDef(
+#     #   name = "% Late-Releasing Blocks",
+#     #   maxWidth = 120,
+#     #  headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
+#     #   aggregate = JS("function(values, rows) {
+#     #     let totaltotal_slots = 0
+#     #     let totalOther = 0
+#     #     rows.forEach(function(row) {
+#     #       totaltotal_slots += row['total_slots']
+#     #       totalOther += row['Other']
+#     #     })
+#     #     return (totaltotal_slots - totalOther) / totaltotal_slots
+#     #   }"),
+#     #   format = colFormat(percent = TRUE, digits = 0),
+#     #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+#     # ),
+#     # 
+#     # Other = colDef(
+#     #   name = "Non-Late-Reasing",
+#     #   maxWidth = 120,
+#     #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
+#     #   aggregate = 'sum',
+#     #   format = colFormat(separators = TRUE, digits = 0),
+#     #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+#     # ),
+#     # 
+#     # `NEW PATIENT 7-DAY` = colDef(
+#     #   maxWidth = 120,
+#     #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
+#     #   aggregate = 'sum',
+#     #   format = colFormat(separators = TRUE, digits = 0),
+#     #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+#     # ),
+#     # 
+#     # `NEW PATIENT 14-DAY` = colDef(
+#     #   maxWidth = 120,
+#     #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
+#     #   aggregate = 'sum',
+#     #   format = colFormat(separators = TRUE, digits = 0),
+#     #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+#     # ),
+#     # 
+#     # `NEW PATIENT 21-DAY` = colDef(
+#     #   maxWidth = 120,
+#     #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
+#     #   aggregate = 'sum',
+#     #   format = colFormat(separators = TRUE, digits = 0),
+#     #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+#     # ),
+#     # 
+#     # `NEW PATIENT 28-DAY` = colDef(
+#     #   maxWidth = 120,
+#     #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
+#     #   aggregate = 'sum',
+#     #   format = colFormat(separators = TRUE, digits = 0),
+#     #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+#     # ),
+#     # 
+#     # `NEW PATIENT 7-DAY NEW PATIENT 14-DAY` = colDef(
+#     #   maxWidth = 120,
+#     #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
+#     #   aggregate = 'sum',
+#     #   format = colFormat(separators = TRUE, digits = 0),
+#     #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
+#     # )
+#     
+#   ) # Close Columns
+# 
+#   ) # Close Reactable
+# 
+#  )
+# )
+```
+
+
+## Block Type Usage 
+```{r Block Combination Output (Slot Count), echo = FALSE, warning = FALSE, message = FALSE}
+
 # Table Output -----------------------------------------------------------------
 htmltools::browsable(
   tagList(
     tags$button(
       tagList(fontawesome::fa("download"), "Download Table"),
-      onclick = "Reactable.downloadDataCSV('late-releasing-count', 'Late-Releasing Blocks')"
+      onclick = "Reactable.downloadDataCSV('block-type-count', 'Block Type Usage')"
     ),
 
 # htmltools::browsable(
@@ -510,8 +738,8 @@ htmltools::browsable(
 #     tags$hr("aria-hidden" = "true"),
 
 reactable(
-  late_block_summary,
-  elementId = "late-releasing-count",
+  block_combination_usage,
+  elementId = "block-type-count",
   # elementId = "cars-grouping-table",
   style = list(fontFamily = 'Calibri',
                  fontSize = '14px'),
@@ -527,7 +755,7 @@ reactable(
     highlight = TRUE,
     # filterable = TRUE,
     pagination = FALSE,
-    # height = 800,
+    height = 800,
     wrap = TRUE,
   searchable = TRUE,
   
@@ -538,7 +766,7 @@ reactable(
             }
           },
 
-  groupBy = c("Campus", "Department", "Provider", "Slot.YearMonth"),
+  groupBy = c("Site", "Department"),
 
   # columnGroups = list(
   #   # colGroup(name = paste0(format(as.Date(start_date), "%b"),"-",format(as.Date(end_date), "%b %Y"), " Visit Volume"), 
@@ -566,18 +794,21 @@ reactable(
 
   columns = list(
 
-    Campus = colDef(
-      name = "Site",
+    Site = colDef(
       minWidth = 180),
-
+    
     Department = colDef(
       minWidth = 200),
     
     Provider = colDef(
       minWidth = 130),
     
-    Slot.YearMonth = colDef(
-      name = "Year-Month",
+    Slot.Year = colDef(
+      name = "Year",
+      minWidth = 100),
+    
+    Slot.Month = colDef(
+      name = "Month",
       minWidth = 100),
     
     # Slot.DateYear = colDef(
@@ -589,7 +820,7 @@ reactable(
       minWidth = 200),
     
     total_slots = colDef(
-      name = "Total Time Slots",
+      name = "Total Slots",
       maxWidth = 100,
       headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
       aggregate = 'sum',
@@ -597,108 +828,7 @@ reactable(
       style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
     ),
     
-    perc_late = colDef(
-      name = "% Late-Releasing Blocks",
-      maxWidth = 100,
-     headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
-      aggregate = JS("function(values, rows) {
-        let totaltotal_slots = 0
-        let totallate_slots = 0
-        rows.forEach(function(row) {
-          totaltotal_slots += row['total_slots']
-          totallate_slots += row['late_slots']
-        })
-        return (totallate_slots) / totaltotal_slots
-      }"),
-      format = colFormat(percent = TRUE, digits = 0),
-      style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    ),
-    
-    DEPARTMENT_ID = colDef(show =F),
-    PROV_ID = colDef(show =F),
-    other_slots = colDef(show =F),
-    late_slots = colDef(show =F)
-    
-    
-    
-    
-    
-    
-    # total_slots = colDef(
-    #   name = "Total Time Slots",
-    #   maxWidth = 120,
-    #   headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
-    #   aggregate = 'sum',
-    #   format = colFormat(separators = TRUE, digits = 0),
-    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    # ),
-    # 
-    # perc_late = colDef(
-    #   name = "% Late-Releasing Blocks",
-    #   maxWidth = 120,
-    #  headerStyle = list(background = "#d80b8c", color = "white", fontWeight = "Bold", fontSize = "14px"),
-    #   aggregate = JS("function(values, rows) {
-    #     let totaltotal_slots = 0
-    #     let totalOther = 0
-    #     rows.forEach(function(row) {
-    #       totaltotal_slots += row['total_slots']
-    #       totalOther += row['Other']
-    #     })
-    #     return (totaltotal_slots - totalOther) / totaltotal_slots
-    #   }"),
-    #   format = colFormat(percent = TRUE, digits = 0),
-    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    # ),
-    # 
-    # Other = colDef(
-    #   name = "Non-Late-Reasing",
-    #   maxWidth = 120,
-    #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
-    #   aggregate = 'sum',
-    #   format = colFormat(separators = TRUE, digits = 0),
-    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    # ),
-    # 
-    # `NEW PATIENT 7-DAY` = colDef(
-    #   maxWidth = 120,
-    #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
-    #   aggregate = 'sum',
-    #   format = colFormat(separators = TRUE, digits = 0),
-    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    # ),
-    # 
-    # `NEW PATIENT 14-DAY` = colDef(
-    #   maxWidth = 120,
-    #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
-    #   aggregate = 'sum',
-    #   format = colFormat(separators = TRUE, digits = 0),
-    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    # ),
-    # 
-    # `NEW PATIENT 21-DAY` = colDef(
-    #   maxWidth = 120,
-    #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
-    #   aggregate = 'sum',
-    #   format = colFormat(separators = TRUE, digits = 0),
-    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    # ),
-    # 
-    # `NEW PATIENT 28-DAY` = colDef(
-    #   maxWidth = 120,
-    #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
-    #   aggregate = 'sum',
-    #   format = colFormat(separators = TRUE, digits = 0),
-    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    # ),
-    # 
-    # `NEW PATIENT 7-DAY NEW PATIENT 14-DAY` = colDef(
-    #   maxWidth = 120,
-    #   headerStyle = list(background = "#210070", color = "white", fontWeight = "Bold", fontSize = "14px"),
-    #   aggregate = 'sum',
-    #   format = colFormat(separators = TRUE, digits = 0),
-    #   style = list(borderLeft = "1.5px solid rgb(230, 230, 230)")
-    # )
-    
+    DEPARTMENT_ID = colDef(show=F)
   ) # Close Columns
 
   ) # Close Reactable
@@ -706,4 +836,3 @@ reactable(
  )
 )
 ```
-
